--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body{
     padding-top:2rem;
 
 }
-h2{
+h1{
     font-size:2.7rem;
     font-weight:bold;
     text-align: center;
@@ -44,9 +44,10 @@ p{
     font-size:1.5rem;
     text-align: center;
     color:hsl(220, 15%, 55%);
-    max-width:80%;
+    max-width: 75% ;
+    padding-bottom: 2rem;
 }
-.attribution{
+footer{
     position:absolute;
     bottom:0%;
 }
