--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,14 @@ h2{
     text-align: center;
     color:hsl(218, 44%, 22%);
     max-width: 90%;
+    margin-bottom:0;
 }
 p{
     font-size:1.5rem;
     text-align: center;
     color:hsl(220, 15%, 55%);
-    max-width:80%;
+    max-width:75%;
+    margin-bottom:2rem;
 }
 .attribution{
     position:absolute;
